<resources>
    <!-- AndroidManifest.xml -->
    <string name="app_name">InventoryApp2</string>

    <!-- activity_editor.xml -->
    <string name="editor_activity_label">Add Product</string>
    <string name="title_products_overview">Product</string>
    <string name="title_supplier_overview">Supplier</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="quantity_in_stock">0</string>
    <string name="edit_product_name">Name: </string>
    <string name="edit_product_price">Price: </string>
    <string name="edit_product_quantity">Quantity: </string>
    <string name="edit_supplier_name">Supplier Name: </string>
    <string name="edit_supplier_phone">Supplier Phone: </string>

    <!-- menu_editor.xml -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- menu_catalog.xml -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="edit_insert_product_successful">Product Saved</string>

    <string name="increment_by_1">1</string>
    <string name="increment_by_10">10</string>
    <string name="increment_by_100">100</string>
    <string name="increment_by_1000">1000</string>
    <string name="quantity_less_than_zero">Quantity can not be less than 0</string>
    <string name="edit_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_fail">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="increment_by">Increment By:</string>
    <string name="no_products_found">No Products Found</string>
    <string name="click_on_add_button_to_add_new_product">Click on Add Button to add new Product</string>
    <string name="sale">Sale</string>

</resources>
