<?xml version="1.0" encoding="utf-8"?><!--

  PROJECT LICENSE

  This project was submitted by Tarek Bohdima as part of the Android Basics Nanodegree At Udacity.

  As part of Udacity Honor code, your submissions must be your own work, hence
  submitting this project as yours will cause you to break the Udacity Honor Code
  and the suspension of your account.

  Me, the author of the project, allow you to check the code as a reference, but if
  you submit it, it's your own responsibility if you get expelled.

  MIT License

  Copyright (c) 2018 Tarek Bohdima

  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

  -->

<!-- Layout for the editor -->
<!--suppress CheckTagEmptyBody -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/title_products_overview" />


        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/TextView_editor"
                android:text="@string/edit_product_name" />

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                tools:text="Product Name" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/TextView_editor"
                android:text="@string/edit_product_price" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                tools:text="Price" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/TextView_editor"
                android:layout_weight="2"
                android:text="@string/edit_product_quantity" />

            <ImageButton
                android:id="@+id/decrement_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_remove_circle_blue_700_24dp"
                tools:ignore="ContentDescription" />

            <!-- Quantity field-->
            <TextView
                android:id="@+id/edit_product_quantity"
                style="@style/TextView_editor"
                android:gravity="center_horizontal"
                android:hint="@string/quantity_in_stock"
                tools:text="10" />

            <ImageButton
                android:id="@+id/increment_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_add_circle_blue_700_24dp"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingBottom="18dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/increment_by"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/colorPrimaryDark"
                    tools:text="Increment By:" />

                <Spinner
                    android:id="@+id/spinner_increments"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/activity_margin"
                    android:spinnerMode="dropdown">

                </Spinner>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    <!-- Divider -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:background="@android:color/holo_blue_dark"></LinearLayout>


    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/title_supplier_overview" />

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/TextView_editor"
                android:text="@string/edit_supplier_name" />
            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                tools:text="Supplier Name" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/TextView_editor"
                android:text="@string/edit_supplier_phone" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_supplier_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone"
                tools:text="001-02-1234567" />

            <ImageButton
                android:id="@+id/call_supplier"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_action_phone_start"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
